Refreshed support for TFlite metadata reader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,23 @@ message("Version: ${DEEPSEG_VERSION}")
 # always build PIC everywhere
 set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
 
-# use local platform OpenCV libraries
+# use local platform OpenCV libraries & Minizip (via PkgConfig)
 find_package(OpenCV REQUIRED COMPONENTS core imgproc imgcodecs video videoio highgui)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(Minizip minizip REQUIRED IMPORTED_TARGET)
+
+# generate Metadata schema with flatc
+# - for which we provide a custom command and a custom target
+# - NB: CMake will detect 'flatc' is a target elsewhere (in Tensorflow Lite) and ensure
+#   it is built for us to use here.. voodoo!
+set(GEN_HEADER_PATH ${CMAKE_BINARY_DIR})
+set(GEN_HEADER_SRC ${CMAKE_CURRENT_LIST_DIR}/models)
+add_custom_command(OUTPUT ${GEN_HEADER_PATH}/metadata_schema_generated.h
+  COMMAND flatc -c --scoped-enums -o ${GEN_HEADER_PATH}/ ${GEN_HEADER_SRC}/metadata_schema.fbs
+  COMMENT "Compiling schema ${GEN_HEADER_SRC}/metadata_schema.fbs"
+  DEPENDS ${GEN_HEADER_SRC}/metadata_schema.fbs)
+add_custom_target(gen-headers ALL
+  DEPENDS ${GEN_HEADER_PATH}/metadata_schema_generated.h)
 
 # use .gitmodules defined Tensorflow version unless a path was provided
 if (TF_CHECKOUT)
@@ -50,9 +65,12 @@ set(CONFU_DEPENDENCIES_BINARY_DIR ${CMAKE_BINARY_DIR}/_deps)
 add_subdirectory(${TENSORFLOW}/tensorflow/lite
   "${CMAKE_CURRENT_BINARY_DIR}/tensorflow-lite" EXCLUDE_FROM_ALL)
 
+# add dependency from tensorflow-lite library to generated headers custom target
+add_dependencies(tensorflow-lite gen-headers)
+
 # build backscrub code
 add_compile_definitions(DEEPSEG_VERSION=${DEEPSEG_VERSION})
-include_directories(BEFORE .)
+include_directories(BEFORE . ${GEN_HEADER_PATH})
 
 add_library(backscrub
   lib/libbackscrub.cc
@@ -62,6 +80,7 @@ target_link_libraries(backscrub
   tensorflow-lite ${CMAKE_DL_LIBS}
   opencv_core
   opencv_imgproc
+  PkgConfig::Minizip
 )
 
 # We don't build the Linux-specific wrapper application on Windows
